--- a/angular.json
+++ b/angular.json
@@ -65,6 +65,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 8081
+          },
           "configurations": {
             "production": {
               "buildTarget": "grid-proyect:build:production"
